2014-06-11  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/tile/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/tile/createthread.c: File removed.

	* nptl/sysdeps/s390/tls.h (TLS_DEFINE_INIT_TP): New macro.

	* sysdeps/alpha/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/alpha/createthread.c: File removed.

	* nptl/sysdeps/powerpc/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/powerpc/createthread.c: File removed.

	* sysdeps/aarch64/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/aarch64/nptl/createthread.c: File removed.

2014-06-11  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strcmp.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp.c: New file:
	multiarch strcmp for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp-ppc64.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strcmp-power7.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strcmp
	multiarch optimizations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.

2014-06-11  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/scripts/validate_benchout.py: New script.
	* benchtests/Makefile (bench-func): Call it.
	* benchtests/scripts/benchout.schema.json: New file.

2014-06-10  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/unix/sysv/linux/tile/nptl/bits/pthreadtypes.h: Moved ...
	* sysdeps/tile/nptl/bits/pthreadtypes.h: ... here.
	* sysdeps/unix/sysv/linux/tile/nptl/bits/semaphore.h: Moved ...
	* sysdeps/tile/nptl/bits/semaphore.h: ... here.
	* sysdeps/unix/sysv/linux/tile/nptl/Makefile: Removed, merged into ...
	* sysdeps/unix/sysv/linux/tile/Makefile: ... here.
	* sysdeps/unix/sysv/linux/tile/nptl/clone.S: Moved ...
	* sysdeps/unix/sysv/linux/tile/clone.S: ... here.
	* sysdeps/unix/sysv/linux/tile/nptl/createthread.c: Moved ...