@@ -1,2 +1,0 @@
-#define PT_VFORK 1   /* pid is never zero */
-#include "vfork.S"
