@@ -1,3 +1,11 @@
+2014-06-11  Chris Metcalf  <cmetcalf@tilera.com>
+
+	* sysdeps/unix/sysv/linux/tile/pt-vfork.c: New file.
+	* sysdeps/unix/sysv/linux/tile/pt-vfork.S: Remove file.
+	* sysdeps/unix/sysv/linux/tile/vfork.S (__vfork): Make PT_VFORK
+	conditional code always true.
+	(__libc_vfork): New alias.
+
 2014-06-11  Roland McGrath  <roland@hack.frob.com>
 
 	* sysdeps/tile/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
